# ChangeLog for app-emacs/emacs-common-gentoo
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  12 Jul 2015; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Sync from Portage tree.

  25 Apr 2015; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Update EGIT_REPO_URI.

  22 Feb 2015; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Remove all backwards compatibility code from the live ebuild.

  22 Feb 2015; Ulrich Müller <ulm@gentoo.org>
  +emacs-common-gentoo-9999.ebuild, -emacs-common-gentoo-9999-r1.ebuild:
  Sync from Portage tree.

  21 Feb 2015; Ulrich Müller <ulm@gentoo.org>
  -emacs-common-gentoo-9999.ebuild, emacs-common-gentoo-9999-r1.ebuild:
  Sync from Portage tree. Remove old.

  19 Feb 2015; Ulrich Müller <ulm@gentoo.org>
  emacs-common-gentoo-9999-r1.ebuild:
  Use "gamestat" group for shared score files, following QA tree policy.

  10 Feb 2015; Ulrich Müller <ulm@gentoo.org>
  emacs-common-gentoo-9999-r1.ebuild:
  Fix permissions of shared score dir in pkg_postinst.

  09 Feb 2015; Ulrich Müller <ulm@gentoo.org>
  emacs-common-gentoo-9999-r1.ebuild:
  Use group 'scores' instead of 'games' for shared score files.

  23 Jan 2015; Ulrich Müller <ulm@gentoo.org>
  emacs-common-gentoo-9999-r1.ebuild:
  Respect GAMES_GROUP variable.

*emacs-common-gentoo-9999-r1 (21 Jan 2015)

  21 Jan 2015; Ulrich Müller <ulm@gentoo.org>
  +emacs-common-gentoo-9999-r1.ebuild:
  Test new setgid games setup.

  21 Jan 2015; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Merge changes from Portage tree.

  19 Jan 2014; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Switch from package.mask to empty KEYWORDS.

  15 Nov 2013; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Install initial site-gentoo.el file from tarball.

  13 Nov 2013; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild: